# hk-ttt

opportunity-management/: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
opportunity-management/scripts/: fix_all_imports.py  fix_imports.py
opportunity-management/src/opportunity_management/: __init__.py
opportunity-management/src/opportunity_management/application/queries/: opportunity_query_service.py
opportunity-management/src/opportunity_management/application/services/: opportunity_application_service.py
opportunity-management/src/opportunity_management/domain/entities/: aggregate_root.py  base_entity.py  customer.py  opportunity.py  problem_statement.py  status_history.py
opportunity-management/src/opportunity_management/domain/enums/: priority.py  skill_importance.py  status.py  timeline_flexibility.py
opportunity-management/src/opportunity_management/domain/events/: domain_event.py  opportunity_cancelled_event.py  opportunity_created_event.py  opportunity_modified_event.py  status_changed_event.py
opportunity-management/src/opportunity_management/domain/services/: opportunity_modification_service.py  opportunity_validation_service.py  skills_matching_preparation_service.py  skills_validation_service.py  (+2 more)
opportunity-management/src/opportunity_management/utils/: date_utils.py  exceptions.py  validators.py
opportunity-management/tests/: test_basic.py  test_opportunity_simple.py
opportunity-management/tests/examples/: example_usage.py  test_opportunity_creation.py  test_skills_management.py  test_status_transitions.py
(+117 files in other folders)
